@@ -1,3 +1,11 @@
+Mon Sep 24 14:21:48 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/searchconnection.py,xappy/searchconnection_doctest2.txt:
+	  Add default_allow and default_deny parameters to query_parse.
+	  These allow a list of field names to be specified which will be
+	  searched by default (instead of searching all free-text fields).
+	  Needs latest SVN version of xapian.
+
 Sat Sep 22 09:21:13 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/searchconnection.py: Add 'rb' to another call to open that
